--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="grid">
       <div class="col-1">
         <h1>Join our community</h1>
@@ -45,6 +45,6 @@
     </div>
 
     </div>
-  </div>
+  </main>
 </body>
 </html>
